--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 target/
 .idea/
 *.iml
+
+/.settings
+
+/.project
+
+/.classpath
+
+.settings
+
+/.settings/org.eclipse.jdt.core.prefs
+/.settings/org.eclipse.jpt.core.prefs
+/.settings/org.eclipse.m2e.core.prefs
+/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
+/.settings/org.eclipse.wst.common.project.facet.core.xml
