--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,14 @@
 		</dependency>
 		<!-- Spring - End -->
 
+		<!-- Apache Utils - Begin -->
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.6</version>
+		</dependency>
+		<!-- Apache Utils - End -->
+
 		<!-- Logging - Begin-->
 		<dependency>
 			<groupId>log4j</groupId>
