--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<version>1.0-SNAPSHOT</version>
 
 	<properties>
-		<!--<junit.version>4.11</junit.version>-->
+		<junit.version>4.11</junit.version>
 		<hibernate.version>4.2.0.Final</hibernate.version>
 		<spring.framework.version>3.2.2.RELEASE</spring.framework.version>
 		<spring.data.jpa.version>1.3.1.RELEASE</spring.data.jpa.version>
@@ -91,15 +91,22 @@
 		<!-- Logging - End -->
 
 		<!-- Testing - Begin-->
-		<!--<dependency>-->
-		<!--<groupId>junit</groupId>-->
-		<!--<artifactId>junit</artifactId>-->
-		<!--<version>${junit.version}</version>-->
-		<!--<scope>test</scope>-->
-		<!--</dependency>-->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.framework.version}</version>
+		</dependency>
 		<!-- Testing - End -->
 
 	</dependencies>
+
 
 	<profiles>
 		<profile>
@@ -124,12 +131,14 @@
 
 			<build>
 				<plugins>
+
 					<plugin>
 						<artifactId>maven-compiler-plugin</artifactId>
 						<configuration>
 							<compilerArgument>-proc:none</compilerArgument>
 						</configuration>
 					</plugin>
+
 					<plugin>
 						<groupId>org.bsc.maven</groupId>
 						<artifactId>maven-processor-plugin</artifactId>
@@ -147,13 +156,16 @@
 							</execution>
 						</executions>
 					</plugin>
+
 				</plugins>
 			</build>
 		</profile>
 	</profiles>
 
+
 	<build>
 		<plugins>
+
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -161,6 +173,16 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>**/*Suite.java</include>
+					</includes>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
