--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 			<version>${hibernate.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-ehcache</artifactId>
-			<version>${hibernate.version}</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.hibernate</groupId>-->
+			<!--<artifactId>hibernate-ehcache</artifactId>-->
+			<!--<version>${hibernate.version}</version>-->
+		<!--</dependency>-->
 
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -62,6 +62,12 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
+			<version>${spring.framework.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-tx</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
 		<!-- Spring - End -->
