pom.xml formatting style change

--- a/pom.xml
+++ b/pom.xml
@@ -20,25 +20,23 @@
 
 	<dependencies>
 
-		<!-- Hibernate - Begin-->
+		<!-- Hibernate -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-ehcache</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>${hibernate.version}</version>
 		</dependency>
-		<!-- Hibernate - End -->
+
 
 		<dependency>
 			<groupId>postgresql</groupId>
@@ -46,64 +44,60 @@
 			<version>${postgresql.jdbc.version}</version>
 		</dependency>
 
-		<!-- Spring - Begin -->
+
+		<!-- Spring -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
 			<version>${spring.data.jpa.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
-		<!-- Spring - End -->
 
-		<!-- Apache Utils - Begin -->
+
+		<!-- Apache Utils -->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-		<!-- Apache Utils - End -->
 
-		<!-- Logging - Begin-->
+
+		<!-- Logging -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 			<scope>runtime</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>${slf4j.version}</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- Logging - End -->
 
-		<!-- Testing - Begin-->
+
+		<!-- Testing -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.framework.version}</version>
 		</dependency>
-		<!-- Testing - End -->
 
 	</dependencies>
 
@@ -121,7 +115,6 @@
 					<artifactId>jpa-api</artifactId>
 					<version>2.0-cr-1</version>
 				</dependency>
-
 				<dependency>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-jpamodelgen</artifactId>
@@ -165,7 +158,6 @@
 
 	<build>
 		<plugins>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -182,7 +174,6 @@
 					</includes>
 				</configuration>
 			</plugin>
-
 		</plugins>
 	</build>
 
