--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,14 @@
 		</dependency>
 
 
+		<!-- J2EE -->
+		<dependency>
+			<groupId>javax.enterprise</groupId>
+			<artifactId>cdi-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+
 		<!-- Apache Utils -->
 		<dependency>
 			<groupId>commons-lang</groupId>
@@ -82,7 +90,6 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
