--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ target/
 /.settings/org.eclipse.m2e.core.prefs
 /.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
 /.settings/org.eclipse.wst.common.project.facet.core.xml
+
+*.stats
