--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,3 +5,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %t %c{2}:%L - %m%n
 
 log4j.category.org.springframework.beans.factory=INFO
+
+# Show SQL:
+#log4j.logger.org.hibernate.SQL=TRACE
+#log4j.logger.org.hibernate.type=TRACE
