--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,14 @@ target/
 .idea/
 *.iml
 
-/.settings
+.project
+.classpath
+.settings*
 
-/.project
 
-/.classpath
-
-.settings
-
-/.settings/org.eclipse.jdt.core.prefs
-/.settings/org.eclipse.jpt.core.prefs
-/.settings/org.eclipse.m2e.core.prefs
-/.settings/org.eclipse.wst.common.project.facet.core.prefs.xml
-/.settings/org.eclipse.wst.common.project.facet.core.xml
-
+stats
+results
 *.stats
+
+
+dependency-reduced-pom.xml
