--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,15 @@
 
 	<properties>
 		<junit.version>4.11</junit.version>
-		<hibernate.version>4.2.0.Final</hibernate.version>
 		<spring.framework.version>3.2.2.RELEASE</spring.framework.version>
 		<spring.data.jpa.version>1.3.1.RELEASE</spring.data.jpa.version>
+		<hibernate.version>4.2.0.Final</hibernate.version>
 		<postgresql.jdbc.version>9.1-901.jdbc4</postgresql.jdbc.version>
 		<slf4j.version>1.7.5</slf4j.version>
+		<log4j.version>1.2.17</log4j.version>
+		<maven.shade-plugin.version>2.1</maven.shade-plugin.version>
+		<maven.compiler-plugin.version>3.1</maven.compiler-plugin.version>
+		<maven.surefile-plugin.version>2.14.1</maven.surefile-plugin.version>
 	</properties>
 
 
@@ -88,7 +92,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
+			<version>${log4j.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -172,8 +176,8 @@
 					<!--DO NOT USE mave-jar-plugin nor maven-assembly-plugin !!!-->
 					<!--http://stackoverflow.com/a/13943824/1432478-->
 					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-shade-plugin</artifactId>
+						<version>${maven.shade-plugin.version}</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
@@ -206,6 +210,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler-plugin.version}</version>
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
@@ -214,6 +219,7 @@
 
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefile-plugin.version}</version>
 				<configuration>
 					<includes>
 						<include>**/*Suite.java</include>
