--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<properties>
 		<junit.version>4.11</junit.version>
 		<spring.framework.version>3.2.2.RELEASE</spring.framework.version>
-		<spring.data.jpa.version>1.3.1.RELEASE</spring.data.jpa.version>
+		<spring.data-jpa.version>1.3.1.RELEASE</spring.data-jpa.version>
 		<hibernate.version>4.2.0.Final</hibernate.version>
 		<postgresql.jdbc.version>9.1-901.jdbc4</postgresql.jdbc.version>
 		<slf4j.version>1.7.5</slf4j.version>
@@ -58,7 +58,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
-			<version>${spring.data.jpa.version}</version>
+			<version>${spring.data-jpa.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -85,6 +85,13 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.javatuples</groupId>
+			<artifactId>javatuples</artifactId>
+			<version>1.2</version>
 		</dependency>
 
 
@@ -194,6 +201,41 @@
 										</transformer>
 										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 											<mainClass>pl.edu.agh.db2.northwind.main.DataLoader</mainClass>
+										</transformer>
+									</transformers>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+
+		<profile>
+			<id>QueryRunner-produce-jar</id>
+			<build>
+				<plugins>
+					<!--DO NOT USE mave-jar-plugin nor maven-assembly-plugin !!!-->
+					<!--http://stackoverflow.com/a/13943824/1432478-->
+					<plugin>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>${maven.shade-plugin.version}</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<transformers>
+										<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+											<resource>META-INF/spring.handlers</resource>
+										</transformer>
+										<transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+											<resource>META-INF/spring.schemas</resource>
+										</transformer>
+										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+											<mainClass>pl.edu.agh.db2.northwind.main.QueryRunner</mainClass>
 										</transformer>
 									</transformers>
 								</configuration>
