--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
 											<resource>META-INF/spring.schemas</resource>
 										</transformer>
 										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-											<mainClass>pl.edu.agh.db2.northwind.main.DataLoader</mainClass>
+											<mainClass>pl.edu.agh.db2.northwind.main.loader.DataLoader</mainClass>
 										</transformer>
 									</transformers>
 								</configuration>
@@ -235,7 +235,7 @@
 											<resource>META-INF/spring.schemas</resource>
 										</transformer>
 										<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-											<mainClass>pl.edu.agh.db2.northwind.main.QueryRunner</mainClass>
+											<mainClass>pl.edu.agh.db2.northwind.main.query.QueryRunner</mainClass>
 										</transformer>
 									</transformers>
 								</configuration>
