[setup, fix] fixing previous cherry pick - manual config istead of spring

--- a/src/main/resources/properties/queryRunner.properties
+++ b/src/main/resources/properties/queryRunner.properties
@@ -6,7 +6,7 @@ queryRunner.results.out.append=false
 queryRunner.results.out.type.file.path=results
 
 # possible values: file, stdout, fileInline
-queryRunner.stats.out.type=file
+queryRunner.stats.out.type=fileInline
 queryRunner.stats.out.append=true
 queryRunner.stats.out.logTime=file
 queryRunner.stats.out.type.file.path=stats
