--- a/src/test/resources/properties/queryRunner.properties
+++ b/src/test/resources/properties/queryRunner.properties
@@ -1,11 +1,12 @@
 queryRunner.queriesToExecute=1,2,3,4,5,6
 
-queryRunner.results.show=true
+# possible values: none, file, stdout
 queryRunner.results.out.type=file
 queryRunner.results.out.append=false
-queryRunner.results.out.path=results
+queryRunner.results.out.type.file.path=results
 
-queryRunner.stats.out.type=file
+# possible values: file, stdout, fileInline
+queryRunner.stats.out.type=fileInline
 queryRunner.stats.out.append=true
-queryRunner.stats.out.path=stats
-
+queryRunner.stats.out.logTime=file
+queryRunner.stats.out.type.file.path=stats
