[loading, tuning] batch flushing in java & removing persistence.xml in favour of spring-driven config
batch flushing made with "Adding custom behaviour to all repositories":  http://static.springsource.org/spring-data/data-jpa/docs/current/reference/htmlsingle/#repositories.custom-behaviour-for-all-repositories

--- a/src/main/resources/properties/database.properties
+++ b/src/main/resources/properties/database.properties
@@ -2,3 +2,5 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/n2
 jdbc.username=postgres
 jdbc.password=1234
+
+hibernate.hbm2ddl.auto=validate
