--- a/src/test/resources/properties/database.properties
+++ b/src/test/resources/properties/database.properties
@@ -2,3 +2,5 @@ jdbc.driverClassName=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/n2
 jdbc.username=postgres
 jdbc.password=1234
+
+hibernate.hbm2ddl.auto=validate
